# xfce4-dynamic-opacity

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  opacity-plugin.desktop
source/: CMakeLists.txt  opacity-dialogs.c  opacity-dialogs.h  opacity.c  opacity.h
source/common/: CMakeLists.txt  panel-debug.c  panel-utils.c  panel-xfconf.c
